# monday-retry

./: README.md  setup.cfg
monday-retry/: retry.py
src/monday_retry_test/: mixpanel_middleware.py  monday.py
