[metadata]
name = monday-retry
version = 0.0.1
author = Kamal Salisu
author_email = kamal@makrwatch.com
description = For retrying failed monday api requests
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/saliskamal/monday-retry
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
